# liteos_drive

./: BUILD.gn  deploy.bat  usr_config.mk
code/cat_peripheral_adc/: BUILD.gn  README.md  adc_demo.c
code/cat_peripheral_button/: BUILD.gn  README.md  button_demo.c
code/cat_peripheral_led/: BUILD.gn  README.md  led_demo.c
code/cat_peripheral_motor/: BUILD.gn  motor_demo.c  motor_driver.c  motor_driver.h
code/cat_peripheral_nfc/: BUILD.gn  README.md  nfc_demo.c
code/cat_peripheral_nfc/nfc/: NT3H.c  NT3H.h
code/cat_peripheral_pwm/: BUILD.gn  README.md  pwm_demo.c
